--- a/resources/sass/home/catalog/item.scss
+++ b/resources/sass/home/catalog/item.scss
@@ -6,6 +6,10 @@
 .brand-description {
     margin-bottom: 40px;
     min-height: 500px;
+
+    @media #{$noDesktop} {
+        padding: 15px;
+    }
 }
 
 .catalogs-container {
