--- a/resources/sass/home/product/index.scss
+++ b/resources/sass/home/product/index.scss
@@ -9,6 +9,13 @@
         padding-top: 40px;
         padding-left: 0;
         padding-right: 0;
+
+        @media #{$noDesktop} {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: auto;
+        }
     }
 
     .breadcrumbs {
@@ -118,9 +125,18 @@
     display: flex;
     flex-direction: column;
 
+    @media #{$noDesktop} {
+        width: 100%;
+    }
+
     .selected-name {
+
         font-size: 26px;
         margin-bottom: 40px;
+
+        @media #{$noDesktop} {
+            padding-left: 20px;
+        }
     }
 }
 
@@ -143,6 +159,7 @@
             justify-content: center;
             align-items: center;
             height: auto;
+            width: 100%;
         }
 
         &__title {
@@ -170,8 +187,6 @@
                 font-size: 13px;
                 text-align: center;
                 padding: 8px 15px;
-
-
             }
         }
 
