--- a/resources/sass/layouts/_header-second.scss
+++ b/resources/sass/layouts/_header-second.scss
@@ -15,6 +15,12 @@
             text-transform: uppercase;
             font-weight: bold;
             letter-spacing: 6px;
+
+            @media #{$noDesktop} {
+                font-size: 24px;
+                padding-left: 20px;
+                letter-spacing: 4px;
+            }
         }
 
         &__text {
