--- a/resources/sass/layouts/_footer.scss
+++ b/resources/sass/layouts/_footer.scss
@@ -2,6 +2,10 @@ footer {
     padding-top: 50px;
     background: $main-color3;
 
+    a {
+        cursor: pointer;
+    }
+
     .footer-up {
         display: flex;
         justify-content: center;
@@ -202,6 +206,20 @@ footer {
 
             &_small-img {
                 padding-right: 20px;
+            }
+
+            &_small-text {
+
+                &.mailto {
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                    a {
+                        color: #9ca5af;
+                    }
+                }
             }
 
             .brands-link-wrapper {
