several tunes for auth

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,7 @@
 @import 'home/service/recovery';
 @import 'home/product/index';
 @import 'home/product/item';
+@import 'auth/login';
 
 //
 //// Bootstrap
